Range::collapsed callers should explicitly ASSERT_NO_EXCEPTION. https://bugs.webkit.org/show_bug.cgi?id=108921

Reviewed by Jochen Eisinger.

For clarity and consistency, this patch adjusts Range::collapsed() to
drop the default value of the ExceptionCode parameter it accepts. The
three call sites that called the method with no arguments (all part of
Editor::rangeOfString) will now explicitly ASSERT_NO_EXCEPTION.

* dom/Range.h:
(Range):
* editing/Editor.cpp:
(WebCore::Editor::rangeOfString):


Canonical link: https://commits.webkit.org/127702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142461 268f45cc-cd09-0410-ab3c-d52691b4dbfc